--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 Managed IT Services
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Outsource the responsibility for maintaining and anticipating IT systems and functions to improve operations and reduce costs.
               </p>
               <a href="">
                 Read More
@@ -244,7 +244,8 @@
                 Network Services
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Network Services ensure your business stays connected and secure. 
+                Network design, implementation, optimization, and management.
               </p>
               <a href="">
                 Read More
@@ -264,7 +265,7 @@
                 VoIP Services
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Bitwise MSP provides reliable Voice over IP solutions tailored to streamline your business communications.
               </p>
               <a href="">
                 Read More
@@ -281,10 +282,10 @@
             </div>
             <div class="detail-box">
               <h4>
-                Managed Backup and Disaster Recovery
+                Backup and Disaster Recovery
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Secure and automated backups to protect your data from loss or corruption.
               </p>
               <a href="">
                 Read More
@@ -304,7 +305,7 @@
                 CCTV Systems
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Installation of CCTV cameras tailored to your business needs.
               </p>
               <a href="">
                 Read More
@@ -324,7 +325,7 @@
                 Structured Cabling
               </h4>
               <p>
-                Generators on the Internet tend to repeat predefined chunks as necessary
+                Organized and labeled cabling infrastructure for easy maintenance and scalability.
               </p>
               <a href="">
                 Read More
@@ -427,22 +428,22 @@
             </h6>
             <ul class="price_features">
               <li>
-                2GB RAM
+                Managed IT Services
               </li>
               <li>
-                20GB SSD Cloud Storage
+                Cybersecurity Essentials
               </li>
               <li>
-                Weekly Backups
+                Backup Services
               </li>
               <li>
-                DDoS Protection
+                Network Support
               </li>
               <li>
-                Full Root Access
+                IT Consultation
               </li>
               <li>
-                24/7/365 Tech Support
+                Business Hours Support
               </li>
             </ul>
           </div>
@@ -460,22 +461,22 @@
             </h6>
             <ul class="price_features">
               <li>
-                4GB RAM
+                Managed IT Services
               </li>
               <li>
-                50GB SSD Cloud Storage
+                Cybersecurity Solutions
               </li>
               <li>
-                Weekly Backups
+                Backup and Recovery
               </li>
               <li>
-                DDoS Protection
+                IT Consulting
               </li>
               <li>
                 Full Root Access
               </li>
               <li>
-                24/7/365 Tech Support
+               Tech Support
               </li>
             </ul>
           </div>
@@ -493,19 +494,19 @@
             </h6>
             <ul class="price_features">
               <li>
-                8GB RAM
+                Includes Standard Plan Features, Plus
               </li>
               <li>
-                100GB SSD Cloud Storage
+                Enhanced cybersecurity measures
               </li>
               <li>
-                Weekly Backups
+                Extended backup and recovery options
               </li>
               <li>
-                DDoS Protection
+                Advanced network management.
               </li>
               <li>
-                Full Root Access
+                Priority support with faster response times
               </li>
               <li>
                 24/7/365 Tech Support
@@ -778,7 +779,10 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              With a commitment to innovation and efficiency, 
+              we empower our clients to achieve their goals through secure and optimized IT solutions. 
+              Our comprehensive suite of services includes cybersecurity, cloud computing, 
+              network management, and IT consulting, all supported by our dedicated team
             </p>
           </div>
         </div>
