--- a/index.html
+++ b/index.html
@@ -730,16 +730,13 @@
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/BitwiseMSP">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://sr.linkedin.com/company/bitwisemsp">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/bitwise_msp/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
