--- a/service.html
+++ b/service.html
@@ -74,7 +74,7 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call : +01 123455678990
+                  Call : +597 723-8113
                 </span>
               </a>
             </div>
@@ -226,7 +226,8 @@
 
   <!-- info section -->
 
-  <section class="info_section layout_padding2">
+  
+  </section<section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -238,35 +239,32 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  South America | Suriname | Paramaribo
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +597 723-8113
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  info@bitwisesr.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/BitwiseMSP">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://sr.linkedin.com/company/bitwisemsp">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
+            <a href="https://www.instagram.com/bitwise_msp/">
+              <i class="fa fa-instagram" aria-hidden="true"></i>>
             </a>
           </div>
         </div>
@@ -276,7 +274,7 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
@@ -284,7 +282,7 @@
                 <img src="images/nav-bullet.png" alt="">
                 About
               </a>
-              <a class="active" href="service.html">
+              <a class="" href="service.html">
                 <img src="images/nav-bullet.png" alt="">
                 Services
               </a>
@@ -305,7 +303,10 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              With a commitment to innovation and efficiency, 
+              we empower our clients to achieve their goals through secure and optimized IT solutions. 
+              Our comprehensive suite of services includes cybersecurity, cloud computing, 
+              network management, and IT consulting, all supported by our dedicated team
             </p>
           </div>
         </div>
