--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Hostit</title>
+  <title>Bitwise MSP</title>
 
 
   <!-- bootstrap core css -->
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>Hostit</span>
+            <span>Bitwise MSP</span>
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call : +01 123455678990
+                  Call : +597 723-8113
                 </span>
               </a>
             </div>
@@ -98,9 +98,33 @@
               </h2>
             </div>
             <p>
-              Words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks </p>
-            <a href="">
-              Read More
+              <section id="about-us" class="section">
+                <div class="container">
+                    <div class="section-title">
+                      
+                    </div>
+                    <div class="section-content">
+                        <p>At Bitwise MSP, we are dedicated to providing comprehensive Managed IT Services that empower businesses to thrive in today's digital landscape. With a focus on innovation, reliability, and customer satisfaction, we offer a wide range of IT solutions tailored to meet the unique needs of our clients.</p>
+                        <h3>Our Mission</h3>
+                        <p>Our mission is to deliver proactive and strategic IT services that enable businesses to achieve their goals efficiently and securely. We strive to build long-term partnerships with our clients based on trust, integrity, and exceptional service delivery.</p>
+                        <h3>Why Choose Us?</h3>
+                        <ul>
+                            <li><strong>Expertise:</strong> Our team of experienced professionals brings extensive knowledge and skills to every project.</li>
+                            <li><strong>Reliability:</strong> We ensure reliable IT solutions that support your business operations 24/7.</li>
+                            <li><strong>Customer-Centric Approach:</strong> We prioritize customer satisfaction and strive to exceed expectations.</li>
+                            <li><strong>Innovation:</strong> We stay ahead of technology trends to offer cutting-edge solutions that drive business growth.</li>
+                        </ul>
+                        <h3>Our Services</h3>
+                        <p>From Managed IT Services and cybersecurity solutions to cloud computing and network management, Bitwise MSP provides the tools and expertise needed to optimize your IT infrastructure and achieve your business objectives.</p>
+                        <h3>Get in Touch</h3>
+                        <p>Discover how Bitwise MSP can support your business with reliable IT solutions. Contact us today to schedule a consultation or learn more about our services.</p>
+                    </div>
+                </div>
+            </section>
+             
+            </p>
+            <a href="contact.html">
+              Contact Us
             </a>
           </div>
         </div>
@@ -130,34 +154,31 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  South America | Suriname | Paramaribo
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +597 723-8113
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  info@bitwisesr.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/BitwiseMSP">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://sr.linkedin.com/company/bitwisemsp">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/bitwise_msp/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -168,11 +189,11 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
-              <a class="active" href="about.html">
+              <a class="" href="about.html">
                 <img src="images/nav-bullet.png" alt="">
                 About
               </a>
@@ -197,7 +218,10 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              With a commitment to innovation and efficiency, 
+              we empower our clients to achieve their goals through secure and optimized IT solutions. 
+              Our comprehensive suite of services includes cybersecurity, cloud computing, 
+              network management, and IT consulting, all supported by our dedicated team
             </p>
           </div>
         </div>
@@ -215,6 +239,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- end info section -->
 
