--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Hostit</title>
+  <title>Bitwise MSP</title>
 
 
   <!-- bootstrap core css -->
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>Hostit</span>
+            <span>Bitwise MSP</span>
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,7 +74,7 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call : +01 123455678990
+                  Call : +597 723-8113
                 </span>
               </a>
             </div>
@@ -136,34 +136,31 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  South America | Suriname | Paramaribo
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +597 723-8113
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  info@bitwisesr.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/BitwiseMSP">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://sr.linkedin.com/company/bitwisemsp">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/bitwise_msp/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -174,7 +171,7 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
@@ -190,7 +187,7 @@
                 <img src="images/nav-bullet.png" alt="">
                 Pricing
               </a>
-              <a class="active" href="contact.html">
+              <a class="" href="contact.html">
                 <img src="images/nav-bullet.png" alt="">
                 Contact Us
               </a>
@@ -203,7 +200,10 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              With a commitment to innovation and efficiency, 
+              we empower our clients to achieve their goals through secure and optimized IT solutions. 
+              Our comprehensive suite of services includes cybersecurity, cloud computing, 
+              network management, and IT consulting, all supported by our dedicated team
             </p>
           </div>
         </div>
