--- a/price.html
+++ b/price.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Hostit</title>
+  <title>Bitwise MSP</title>
 
 
   <!-- bootstrap core css -->
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <span>Hostit</span>
+            <span>Bitwise MSP</span>
           </a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
                 <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="price.html">Pricing</a>
+                <a class="nav-link" href="price.html">Tiers</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
@@ -74,7 +74,7 @@
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call : +01 123455678990
+                  Call : +597 723-8113
                 </span>
               </a>
             </div>
@@ -97,12 +97,11 @@
                       Web Hosting
                     </h1>
                     <p>
-                      Anything embarrassing hidden in the middle of text. All the Lorem Ipsuanything embarrassing hidden in the middle of text. All the Lorem Ipsumm </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
+                      Whether you’re a small business, a growing enterprise, or a personal blogger, our web hosting solutions are tailored to meet your specific needs.                    <div class="btn-box">
+                      <a href="about.html" class="btn-1">
                         Read More
                       </a>
-                      <a href="" class="btn-2">
+                      <a href="contact.html" class="btn-2">
                         Contact Us
                       </a>
                     </div>
@@ -130,12 +129,11 @@
                       Web Hosting
                     </h1>
                     <p>
-                      Anything embarrassing hidden in the middle of text. All the Lorem Ipsuanything embarrassing hidden in the middle of text. All the Lorem Ipsumm </p>
-                    <div class="btn-box">
-                      <a href="" class="btn-1">
+                      Whether you’re a small business, a growing enterprise, or a personal blogger, our web hosting solutions are tailored to meet your specific needs.                    <div class="btn-box">
+                      <a href="about.html" class="btn-1">
                         Read More
                       </a>
-                      <a href="" class="btn-2">
+                      <a href="contact.html" class="btn-2">
                         Contact Us
                       </a>
                     </div>
@@ -208,13 +206,13 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Our Pricing
+          Our Tiers
         </h2>
       </div>
       <div class="price_container ">
         <div class="box">
           <div class="detail-box">
-            <h2>$ <span>49</span></h2>
+            <h2>$ <span>?</span></h2>
             <h6>
               Startup
             </h6>
@@ -247,7 +245,7 @@
         </div>
         <div class="box">
           <div class="detail-box">
-            <h2>$ <span>99</span></h2>
+            <h2>$ <span>?</span></h2>
             <h6>
               Standard
             </h6>
@@ -280,7 +278,7 @@
         </div>
         <div class="box">
           <div class="detail-box">
-            <h2>$ <span>149</span></h2>
+            <h2>$ <span>?</span></h2>
             <h6>
               Business
             </h6>
@@ -331,34 +329,31 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  South America | Suriname | Paramaribo
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +597 723-8113
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  info@bitwisesr.com
                 </span>
               </a>
             </div>
           </div>
           <div class="info_social">
-            <a href="">
+            <a href="https://www.facebook.com/BitwiseMSP">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
+            <a href="https://sr.linkedin.com/company/bitwisemsp">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/bitwise_msp/">
               <i class="fa fa-instagram" aria-hidden="true"></i>
             </a>
           </div>
@@ -369,7 +364,7 @@
               Links
             </h4>
             <div class="info_links">
-              <a class="" href="index.html">
+              <a class="active" href="index.html">
                 <img src="images/nav-bullet.png" alt="">
                 Home
               </a>
@@ -381,9 +376,9 @@
                 <img src="images/nav-bullet.png" alt="">
                 Services
               </a>
-              <a class="active" href="price.html">
+              <a class="" href="price.html">
                 <img src="images/nav-bullet.png" alt="">
-                Pricing
+                Tiers
               </a>
               <a class="" href="contact.html">
                 <img src="images/nav-bullet.png" alt="">
@@ -398,7 +393,10 @@
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              With a commitment to innovation and efficiency, 
+              we empower our clients to achieve their goals through secure and optimized IT solutions. 
+              Our comprehensive suite of services includes cybersecurity, cloud computing, 
+              network management, and IT consulting, all supported by our dedicated team
             </p>
           </div>
         </div>
