email push subscribtion and contact form update

--- a/service.html
+++ b/service.html
@@ -227,7 +227,7 @@
   <!-- info section -->
 
   
-  </section<section class="info_section layout_padding2">
+  <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
         <div class="col-md-3">
@@ -314,8 +314,8 @@
           <h4>
             Subscribe
           </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
+          <form action="https://formspree.io/f/xnnanplv" method="post">
+            <input type="text" placeholder="Enter email" name="subscribeEmail" required/>
             <button type="submit">
               Subscribe
             </button>
