--- a/contact.html
+++ b/contact.html
@@ -96,21 +96,21 @@
       <div class="row">
         <div class="col-md-8 col-lg-6 mx-auto">
           <div class="form_container">
-            <form action="">
+            <form action="https://formspree.io/f/xpwawpka" method="post">
               <div>
-                <input type="text" placeholder="Your Name" />
+                <input type="text" placeholder="Your Name" name="fullName" required/>
               </div>
               <div>
-                <input type="email" placeholder="Your Email" />
+                <input type="email" placeholder="Your Email" name="email" required/>
               </div>
               <div>
-                <input type="text" placeholder="Your Phone" />
+                <input type="text" placeholder="Your Phone" name="phone" required/>
               </div>
               <div>
-                <input type="text" class="message-box" placeholder="Message" />
+                <input type="text" class="message-box" placeholder="Message" name="message" required/>
               </div>
               <div class="btn_box ">
-                <button>
+                <button type="submit">
                   SEND
                 </button>
               </div>
@@ -211,8 +211,8 @@
           <h4>
             Subscribe
           </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
+          <form action="https://formspree.io/f/xnnanplv" method="post">
+            <input type="text" placeholder="Enter email" name="subscribeEmail" required/>
             <button type="submit">
               Subscribe
             </button>
