--- a/index.html
+++ b/index.html
@@ -787,8 +787,8 @@
           <h4>
             Subscribe
           </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
+          <form action="https://formspree.io/f/xnnanplv" method="post">
+            <input type="text" placeholder="Enter email" name="subscribeEmail" required/>
             <button type="submit">
               Subscribe
             </button>
